--- a/package.json
+++ b/package.json
@@ -9,18 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "@fontsource/dancing-script": "^5.0.18",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.43.1",
+    "@types/nodemailer": "^6.4.15",
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
+    "classnames": "^2.5.1",
+    "fc": "^1.6.1",
+    "framer-motion": "^11.1.9",
+    "fs": "^0.0.1-security",
+    "next": "14.2.3",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
+    "puppeteer": "^22.8.0",
+    "puppeteer-core": "^22.8.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.4",
+    "react-loading": "^2.0.3",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
+    "stripe": "^15.6.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
