--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "fc": "^1.6.1",
     "framer-motion": "^11.1.9",
     "fs": "^0.0.1-security",
@@ -35,6 +36,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "stripe": "^15.6.0",
+    "tailwind-merge": "^2.3.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
