--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
   "crons": [
+ 
     {
-      "path": "/api/every-minute",
-      "schedule": "* * * * *"
+      "path": "/api/every-day",
+      "schedule": "0 0 * * *"
     }
   ]
 }
