--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
+    "sharp": "^0.33.3",
     "stripe": "^15.6.0",
     "tailwind-merge": "^2.3.0",
     "uuid": "^9.0.1"
