--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.43.1",
+    "@tabler/icons-react": "^3.3.0",
     "@types/nodemailer": "^6.4.15",
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
