about section updated, contact form implemented,that's it

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "fc": "^1.6.1",
-    "framer-motion": "^11.1.9",
+    "framer-motion": "^11.2.0",
     "fs": "^0.0.1-security",
     "next": "14.2.3",
     "node-cron": "^3.0.3",
@@ -33,6 +33,7 @@
     "puppeteer-core": "^22.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.51.4",
     "react-loading": "^2.0.3",
     "react-spinner": "^0.2.7",
